Startup Crash in [@ EwsIncomingServer::DeleteFolderWithId] via SyncFolderList
Categories
(MailNews Core :: Networking: Exchange, defect, P1)
Tracking
(thunderbird144 affected, thunderbird145 fixed)
People
(Reporter: wsmwk, Assigned: edicharry)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-beta+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/03fa6994-a8d4-4e75-b021-73b660251024 and EwsIncomingServer::UpdateFolderWithDetails bp-36e23f11-da35-4b15-996d-e2bb20251027 are both startup crashes through SyncFolderList
Reason:
EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames:
0 xul.dll EwsIncomingServer::DeleteFolderWithId(nsTSubstring<char> const&) mailnews/protocols/ews/src/EwsIncomingServer.cpp:245
0 xul.dll EwsIncomingServer::SyncFolderList::<lambda_5>::operator()(nsTSubstring<char> ... mailnews/protocols/ews/src/EwsIncomingServer.cpp:420
0 xul.dll std::invoke(EwsIncomingServer::SyncFolderList::<lambda_5>&, nsTSubstring<char... /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/type_traits:1739
0 xul.dll std::_Func_impl_no_alloc<`lambda at /builds/worker/checkouts/gecko/comm/mailn... /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/functional:907
1 xul.dll xpcom::refptr::impl$1::deref(xpcom::refptr::RefPtr<xpcom::interfaces::idl::IE... dist/xpcrs/rt/IEwsClient.rs:740
1 xul.dll ews_xpcom::safe_xpcom::folder_listener::SafeEwsFolderListener::on_folder_dele... rust/ews_xpcom/src/safe_xpcom/folder_listener.rs:103
1 xul.dll ews_xpcom::client::impl$0::push_sync_state_to_ui::async_fn$0(core::pin::Pin<r... rust/ews_xpcom/src/client.rs:848
1 xul.dll ews_xpcom::client::impl$0::sync_folder_hierarchy_inner::async_fn$0<xpcom::int... rust/ews_xpcom/src/client.rs:328
2 xul.dll ews_xpcom::client::impl$0::sync_folder_hierarchy::async_fn$0(core::pin::Pin<r... rust/ews_xpcom/src/client.rs:238
2 xul.dll async_task::runnable::spawn_local::impl$1::poll(core::pin::Pin<ref_mut$<async... third_party/rust/async-task/src/runnable.rs:132
| Reporter | ||
Comment 1•1 month ago
|
||
I don't see any beta crashes thus far.
| Reporter | ||
Updated•1 month ago
|
| Assignee | ||
Comment 2•1 month ago
•
|
||
I'm guessing this was fixed as part of https://phabricator.services.mozilla.com/D268292 (specifically this change), which would explain why we're not seeing it in Beta, but it is pointing at something that looks like a real issue, so I'm going to submit a patch for that.
Comment 3•1 month ago
|
||
Looking at the crash-stats aggregations, it seems to mostly be concentrated around 144.
| Assignee | ||
Comment 4•1 month ago
|
||
Updated•1 month ago
|
| Assignee | ||
Updated•1 month ago
|
| Assignee | ||
Updated•1 month ago
|
| Assignee | ||
Updated•1 month ago
|
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/a91899deabe3
Do not return success if folder not found. r=jtracey
Updated•1 month ago
|
| Assignee | ||
Comment 6•1 month ago
|
||
Comment on attachment 9522724 [details]
Bug 1996646 - Do not return success if folder not found. r=#thunderbird-back-end-reviewers
Uplift Approval Request
- Please state case for uplift consideration and ensure bug severity is set: This is a crash that can occur multiple ways.
- User impact if declined: Infrequent crashes during EWS folder operations.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Daily?: No
- Has the fix been verified in Beta?: No
- Needs manual test from QA?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This change guards against a null return value in a single function.
- Does the fix cause any migrations to be skipped?: No
- String changes made/needed:
Comment 7•1 month ago
|
||
Comment on attachment 9522724 [details]
Bug 1996646 - Do not return success if folder not found. r=#thunderbird-back-end-reviewers
[Triage Comment]
Approved for beta
Comment 8•27 days ago
|
||
| bugherder uplift | ||
Thunderbird 145.0b4:
https://hg.mozilla.org/releases/comm-beta/rev/27d0a1c9471e
Description
•