Bug 1996646 - Do not return success if folder not found. r=jtracey

Differential Revision: https://phabricator.services.mozilla.com/D270237

--HG--
extra : amend_source : 88bd5203c87e8d150f7fb1d99699f9b2f797ffb4